<resources>
    <string name="app_name">Taller1</string>
    <string name="explorar_destinos">Explorar Destinos</string>
    <string name="favoritos">Favoritos</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="a_adir_a_favoritos">Añadir a Favoritos</string>
    <string name="nombredestino">nombreDestino</string>
    <string name="pais">pais</string>
    <string name="categoria">categoria</string>
    <string name="plan">plan</string>
    <string name="precio">precio</string>
</resources>